
** Customize

---
*** New major mode 'Customize-dirlocals-mode'.
This is intended for customizing directory-local variables in the
current directory's ".dir-locals.el" file.

** Pulse

--
*** New function 'pulse-faces'.
This function pulses a specified list of faces.  The pulse duration is
determined by the new user option 'pulse-face-duration'.

** Miscellaneous

---
*** 'tooltip-mode' now shows tooltips after delay on TTY frames.
Display of tooltips on text-only terminals now happens after
'tooltip-delay' as it does on GUI terminals.  To get back the old
behavior, customize the value of 'tooltip-delay' to zero.

---
*** New user option 'follow-mode-prefix-key'.
This user option replaces 'follow-mode-prefix', which had to be set
before loading Follow mode.  This new option allows you to change the
prefix even after it was loaded, using 'customize-option' or 'setopt'.

---
*** cdl.el is now obsolete.
Use 'shell-command' and 'shell-command-on-region' instead.

---
*** echistory.el is now obsolete.

---
*** hashcash.el is now obsolete.
It is believed to no longer be useful as a method to fight spam.

---
*** kermit.el is now obsolete.

---
*** New user option 'ns-click-through' on Nextstep (GNUstep/Mac OS).
This controls whether activation clicks are passed through to Emacs
commands.  When nil, clicking on an inactive Emacs frame will only
activate it.  When t (the default), the click will both activate the
frame and be interpreted as a command.

---
*** New user option 'global-hl-line-modes'.
This specifies in which major modes should the 'global-hl-line-mode' be
switched on.  The default is t, which means enable it in all major
modes.

---
*** New user option 'display-fill-column-indicator-warning'.
Customize it to a non-nil value to have the fill-column indicators
change their face if the current line exceeds the 'fill-column'.  The
new face 'display-fill-column-indicator-warning-face' is used to